--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # SQLite database and Prisma migrations
 prisma/dev.db
 prisma/migrations/
+prisma/dev.db-journal
