--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@prisma/client": "^6.9.0",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/nanoid": "^3.0.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.1.5",
     "prisma": "^6.9.0",
     "tsx": "^4.19.4"
   }
